--- a/src/index.css
+++ b/src/index.css
@@ -11,90 +11,20 @@ header {
     color: #333;
 }
 
+header a {
+    text-decoration: none;
+    color: black;
+}
+
 /* Contenitore delle card */
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     padding: 30px;
     gap: 30px;
 }
 
-/* Card container styling */
-.card {
-    width: 300px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    height: 500px;
-    /* Imposta un'altezza fissa per la card */
-}
 
-/* Immagine del film - senza ritagliarla, si adatta completamente */
-.card-image img {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-}
-
-/* Contenuto della card (titolo, autore, descrizione) */
-.card-content {
-    padding: 15px;
-    flex-grow: 1;
-    /* La sezione del contenuto cresce per occupare spazio rimanente */
-    overflow: hidden;
-    /* Nasconde l'overflow per il contenuto */
-}
-
-/* Aggiungi lo scroll alla descrizione */
-.card-content p {
-    font-size: 0.9em;
-    color: #555;
-    line-height: 1.5em;
-    max-height: 150px;
-    /* Limita l'altezza del paragrafo */
-    overflow-y: scroll;
-    /* Aggiungi lo scroll verticale */
-}
-
-/* Nascondi la barra di scorrimento su tutti i browser */
-.card-content p::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
-
-.card-content p {
-    -ms-overflow-style: none;
-    /* Per IE e Edge */
-    scrollbar-width: none;
-    /* Per Firefox */
-}
-
-/* Stile del bottone per "Vedi altro" */
-.bottone-dettaglio {
-    text-align: center;
-    /* Centra il bottone */
-    margin-top: auto;
-    /* Spinge il bottone al fondo della card */
-    padding-bottom: 15px;
-    /* Spazio inferiore */
-}
-
-.bottone-dettaglio a {
-    text-decoration: none;
-    background-color: #007BFF;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-/* Hover effect per il bottone */
-.bottone-dettaglio a:hover {
-    background-color: #0056b3;
-}
 
 /* Contenitore principale della pagina */
 .container-movie-page {
